force-app/main/default/objects/Mobile_Notification__c/Mobile_Notification__c.object-meta.xml
<CustomObject>
    <label>Mobile Notification</label>
    <nameField>
        <displayFormat>N-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>