force-app/main/default/objects/Mobile_Notification__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mobile Notifications</relationshipLabel>
    <relationshipName>Mobile_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>