force-app/main/default/objects/Mobile_Notification__c/fields/Deleted_by_user__c.field-meta.xml
<CustomField>
    <fullName>Deleted_by_user__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted by customer</label>
    <type>Checkbox</type>
</CustomField>